Fixed scrollbars on page transitions

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -3,8 +3,6 @@ body {
   font-family: Roboto, Arial !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  // Prevents horizontal scrollbar on page transitions
-  overflow-x: hidden;
 }
 
 code {
